--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>sremg</title>
+    <title>Escoteiros do Brasil - Minas Gerais</title>
+
+    <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
+    <meta name="theme-color" content="#1b6c96">
+
+      <!-- SEO -->
+    <meta property="twitter:card" content="Site Oficial da Região Escoteira de Minas Gerais - Escoteiros do Brasil" />
+    <meta property="twitter:site" content="Escoteiros de Minas" />
+    <meta name="description" content="Site Oficial da Região Escoteira de Minas Gerais - Escoteiros do Brasil">
+
+      <!-- OPEN GRAPH  -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Escoteiros de Minas">
+    <meta property="og:url" content="" />
+    <meta property="og:title" content="Escoteiros de Minas" />
+    <meta property="og:description" content="Site Oficial da Região Escoteira de Minas Gerais - Escoteiros do Brasil" />
+    <meta property="og:image" content="">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.0/css/bulma.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
