Prerender ready and images to square

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <div id="fb-root"></div>
     <script>
-      // window.prerenderReady = false
+      window.prerenderReady = false
       (function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
