--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="0eNj7uaIva_dHJl_c9dFWWWtqprdYWf__3S7iuMhwdc" />
 
     <base href="/">
 
