Notifications prompt and implementation.
Implemented the OneSignal SDK, a copy on webpack to send it to dist
folder and the options required to one signal run smoothly.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <base href="/">
 
     <meta name="theme-color" content="#1b6c96">
+    <link rel="manifest" href="/static/manifest.json">
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -31,6 +32,7 @@
       <main-footer></main-footer>
     </div>
     <div id="fb-root"></div>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
     <script>
       window.prerenderReady = false
 
