Offline helper and SW to offline data

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <transition name="fade">
         <router-view></router-view>
       </transition>
+      <offline-helper></offline-helper>
       <main-footer></main-footer>
     </div>
     <div id="fb-root"></div>
